changes made to catalog page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <div class="catalog-items">
     <div class="catalog-item">
       <img
-        src="https://via.placeholder.com/200x200?text=Suit+1"
+        src="https://scontent-jnb2-1.xx.fbcdn.net/v/t39.30808-6/487799986_1059784152854031_5159455244190448834_n.jpg?stp=cp6_dst-jpg_s640x640_tt6&_nc_cat=106&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeE5fAsqoiqDWBWGyDK1-_c4q18bN1NGXS2rXxs3U0ZdLVfbiNkPQL3_BftzFeQGsT3q00zmftB_fXJCa2GOPuX0&_nc_ohc=7aqHp8NdK6EQ7kNvwFMZtgo&_nc_oc=AdlrdYtPsQey2JW6w45VBIKZaeClMpRqqdkjYVtrtn_EU5RfV6P-s5fGCbJjEp4ewG4&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=zt36WDxTOSt-0Of63bAV9A&oh=00_AfTRxyJrimHSy6_tTemb6Hk8Z3IcnU1Vdaf0n2sK8cZfoA&oe=687AB2EC"
         alt="Suit 1"
       />
       <h3>Classic Bespoke Suit</h3>
@@ -103,7 +103,7 @@
 
     <div class="catalog-item">
       <img
-        src="https://via.placeholder.com/200x200?text=Shoes+1"
+        src="https://scontent-jnb2-1.xx.fbcdn.net/v/t51.75761-15/491440820_18396454630109689_8316790904840592807_n.jpg?stp=dst-jpg_s640x640_tt6&_nc_cat=100&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeHaiqImeE62UeVAqqbhYjDMI9AuWv1EeaYj0C5a_UR5put7ayBiazLb_iP3AS1MDPa3PR3VdfI3iAFAknZuTNi6&_nc_ohc=sAtjaNbpydgQ7kNvwEae2Nv&_nc_oc=AdnUTDuHkWQK44_FK6XgKfVJWj8FoTKq5k-RIE2-_-0QkoHtc7Y6cun_xKn9yBnvTtg&_nc_zt=23&_nc_ht=scontent-jnb2-1.xx&_nc_gid=yUY9eitWWGym5QL1mI2jRQ&oh=00_AfQKPLt3b2jEUoxz17C1ROJL7B3K5OYX-AR5uXRhpmlvrQ&oe=687AC45C"
         alt="Shoes 1"
       />
       <h3>Leather Dress Shoes</h3>
@@ -116,7 +116,6 @@
 
     <div class="catalog-item">
       <img
-        src="https://via.placeholder.com/200x200?text=Accessory+1"
         alt="Accessory 1"
       />
       <h3>Silk Tie</h3>
